css/style.css
/* ... */
nav .menu-icon .navicon {
  background: #333;
  display: block;
  height: 2.5px;
  position: relative;
  transition: background .2s ease-out;
  width: 18px;
}

nav .menu-icon .navicon:before,
nav .menu-icon .navicon:after {
  background: #333;
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  transition: all .2s ease-out;
  width: 100%;
}

nav .menu-icon .navicon:before {
  top: 5px;
}

nav .menu-icon .navicon:after {
  top: -5px;
}

/* menu btn */

nav .menu-btn {
  display: none;
}

nav .menu-btn:checked ~ #menu {
/*  max-height: 240px;*/
  max-height: 100vh;
  height: 100vh;
/*  padding: 39vh 0;*/
}

nav .menu-btn:checked ~ .menu-icon {
/*  background-color: rgba(255, 136, 0, 1);*/
  background-color: rgba(255, 255, 255, 0.9);
  transition: .2s ease-out;
}

nav .menu-btn:checked ~ .menu-icon .navicon {
  background: transparent;
}

nav .menu-btn:checked ~ .menu-icon .navicon:before {
  transform: rotate(-45deg);
}

nav .menu-btn:checked ~ .menu-icon .navicon:after {
  transform: rotate(45deg);
}

nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
  top: 0;
}

header {
  width: 86%;
  margin: 0 auto;
  position: relative;
  padding: 13% 0 0.5em 0;
}

header a {
  padding-bottom: 0.05em;
}

header a:hover, 
#about-me a:hover, 
#about-container a:hover, 
#contact a:hover {
  border-bottom: 2px solid #333;
  color: #333;
  transition: color .2s ease-out, border .1s ease-out;
}

header p {
  font-size: 16px;
  line-height: 1.65em;
}

header h1 {
  color: #000;
/*  font-size: 37px;*/
  font-size: calc(24px + 1vw);
  line-height: 1.45em;
  font-weight: 500;
  margin: 0;
  padding: .8em 0 .5em 0;
}

/* project */

.portfolio {
  position: relative;
  width: 100%;
  margin: auto;
  padding: 4% 0;
}

.portfolio h2 {
  padding-left: 7%;
}

.project {
/*  width: 86%;*/
  display: block;
  padding: 28px 7%;
  position: relative;
}

.project:hover {
  transition: height .3s ease-out, padding .3s ease;
  padding: 40px 7%;
}

.project-cta {
  font-size: 15px;
}

.project-role {
  font-size: 15px;
  margin: 13px 0;
  color: #4e4e4e;
}

.project-name {
  display: inline-block;
  vertical-align: middle;
  color: #333;
  font-size: 20.5px;
  max-width: 80%;
  line-height: 1.35em;
}

.project-image {
  width: 29.5%;
  height: auto;
  position: absolute;
  bottom: 0;
  right: 5px;
}

.cubo {
  background-color: #E5F7F5;
  fill: #E5F7F5;
  background-image: linear-gradient(-180deg, #E5F7F5 74%, #c0f5ea 100%);
}

.pinchfun {
  background-color: #fefbde;
  fill: #fefbde;
  background-image: linear-gradient(-180deg, #fefbde 74%, #fff1b6 98%);
}

.music {
  background-color: #ffece0;
  fill: #ffece0;
  background-image: linear-gradient(-180deg, #ffece0 74%, #ffddcd 100%);
}

.other-project {
/*  width: 86%;*/
  display: block;
  padding: 16px 7%;
  position: relative;
  background-color: #fff;
  border-top: 1px solid #e5e5e5;
  border-right: 1px solid #e5e5e5;
  border-left: 1px solid #e5e5e5;
}

.last-item {
  border-bottom: 1px solid #e5e5e5;
}

.other-project:hover {
  background-color: #fafafa;
  padding: 19px 7%;
  transition: all .2s ease-out;
  cursor: pointer;
}

.other-project .project-name {
  font-size: 18.5px;
  line-height: 25px;
}

.other-project .project-role {
  font-size: 14.5px;
  margin-bottom: 0;
}

/* ------- */

/*
.project-info {
  padding: 1.3em 0;
}

.project-img img {
  width: 100%;
  height: 100%;
  border-radius: 1em;
}

.project-img {
  display: flex; 
  position: relative;
  top: 0;
}
*/

/* Pseudo-element animation https://codepen.io/tribex/pen/ZxXJoO 
.project-img::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.15);
  opacity: 0;
  transition: opacity .2s ease-out;
  border-radius: 1em;
}

.project-info:hover > .project-img::before {
  opacity: 1;
}

.project-info:hover > .project-img {
  top: -10px;
  transition: top .2s ease-out;
}

.project-info:hover > .project-title,
.project-info:hover > .project-description {
  color: #f80;
}

.project-title, .project-description {
  color: #333;
}

.project-title {
  font-weight: 400;
  padding: 20px 0;
  margin: 0;
  font-size: 24px;
  line-height: 1.4em;
}

.project-description {
  margin: 0;
  padding: 0;
  line-height: 1em;
  color: #9c9c9c;
  font-size: 16px;
  line-height: 1.55em;
}


/* ------- */

#about-me, #contact {
  width: 86%;
  margin: auto;
  position: relative;
  padding: 1em 0 1em 0;
}

h2 {
  font-size: 28px;
  font-weight: 600;
  color: #555;
  padding-top: 1.4em;
}

#about-me p, #about-me ul,
#contact p {
  font-size: 16px;
  line-height: 1.65em;
  list-style: none;
}
/* adapted from https://stackoverflow.com/questions/13840403/edit-line-thickness-of-css-underline-attribute */

#about-me b {
  box-shadow: inset 0 -3px 0 #fbfbfb, inset 0 -11px 0 #fbe06e;
  font-weight: 400;
}

#about-container {
  padding: 0;
  margin: auto;
  width: 86%;
  grid-template-columns: none;
  font-size: 16px;
  line-height: 1.65em;
}

#about-container ul {
  margin: 0;
  padding-left: 0;
}

#about-container li {
  list-style: none;
}

#about-container h4 {
  margin-top: 0.5em;
  display: inline-block;
  font-weight: 600;
  font-size: 14.5px;
  color: #555;
  border-left: 3px solid #555;
  padding-left: 10px;
  padding-right: 10px;
}

#about-container a {
  padding-bottom: 0.05em;
}

.about-column {
  padding: 0.5em 0;
}

#about-container .experience {
  padding: 0.5em 0;
}

#about-container .role,
#about-container .award, 
#about-container .paper {
  padding: 0.2em 0;
  font-size: 17.5px;
  color: #111;
  font-weight: 500;
}

#about-container .button {
  display: inline-block;
  border: 1px solid #999;
  background: #f6f6f6;
  padding: 0 4px;
  color: #999;
  font-size: 13px;
  border-radius: 5px;
  margin-right: 3px;
}

#about-container .button:hover {
  border: 1px solid #333;
  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.15);
}
/* ... */

